# supabase_oxide

./: Cargo.toml  flake.nix
src/: auth.rs  lib.rs
