[package]
name = "supabase_oxide"
version = "0.1.0"
edition = "2024"

[dependencies]
http = "0.2.12"
postgrest = "1.6.0"
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.47.1", features = ["test-util"] }
