[package]
name = "supabase_oxide"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
http = "1.3.1"
postgrest = { version = "1.6.0", git = "ssh://github.com/frawgg/postgrest-rs" }
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.47.1", features = ["test-util"] }
